adds link to raw data

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
-<p>The police abuse database attempts to collect statistics about clear cases of police abusing their position in ways that violate the rights of the public. The information is sourced from publicly-disclosed articles that are reported in the news. The database is limited to instances of police abuse in the United States.</p>
+<p>The police abuse database attempts to collect statistics about clear cases of police abusing their position in ways that violate the rights of the public. The information is sourced from publicly-disclosed articles that are reported in the news. The database is limited to instances of police abuse in the United States. If you’re interested in auditing the findings or doing your own analysis of the incidents you can download the raw data here: <a href="https://github.com/police-abuse/padb-data">https://github.com/police-abuse/padb-data</a></p>
 <div id="database-composition" class="section level1">
 <h1>Database Composition</h1>
 <p>At this time, the database is made up of 151 incidents collected from public articles.</p>
